<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_number_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_operations" />

            <TextView
                android:id="@+id/display_succes_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success_rate" />

            <TextView
                android:id="@+id/displayLast_correct_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_correct_operation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/previous_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_to_last" />

            <Button
                android:id="@+id/clear_score_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_scores" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>