<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DifficultyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/easy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_mode" />

        <Button
            android:id="@+id/hard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_mode" />

        <Button
            android:id="@+id/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>